Corrections to swagger configuration
