# routes/swagger.js
@@ -4,6 +4,9 @@ const swaggerDocument = require('../swagger.json');
 
 
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.get('/api-docs', 
+    //#swagger.ignore = true
+    swaggerUi.setup(swaggerDocument)
+);
 
 module.exports = router;
